# data-engineering-case

./: README.md  pyproject.toml
part01/: erd_output.csv  normalized_schema.pgsql  view.pgsql
part02/: analysis.ipynb  production_data.csv
part02/plots/: components_by_line.html  days_with_no_production.html  total_daily_scrap.html  unique_components_by_day.html
part03/: AWS_Architecture.md
